--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "helmet": "^2.2.0",
     "ip": "^1.1.3",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
