--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/debugger22/github-audio#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "cross-env": "^3.1.2",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
     "ip": "^1.1.3",
