--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+openssl = { version = "0.10.59", features = ["vendored"] }
 axum = { version = "0.6.2", features = ["headers", "ws"] }
 hyper = { version = "0.14.23", features = ["full"] }
 tokio = { version = "1.24.1", features = ["full"] }
