--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3": "^7.8.5",
+    "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8",
-    "howler": "^2.2.4",
-    "d3": "^7.8.5",
-    "seedrandom": "^3.0.5"
+    "seedrandom": "^3.0.5",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/howler": "^2.2.11",
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/styled-components": "^5.1.34",
-    "@types/howler": "^2.2.11",
-    "@types/d3": "^7.4.3",
-    "@types/node": "^20.12.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "terser": "^5.39.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
@@ -36,4 +37,4 @@
   "author": "Sudhanshu Mishra",
   "license": "MIT",
   "homepage": "https://github.com/debugger22/github-audio#readme"
-} 
+}
